# cpp_project_template

./: CMakeLists.txt  README.md  generate_project.bat  generate_project.sh
src/: main.cpp
